fixed spacing

--- a/public/css/_layerview.css
+++ b/public/css/_layerview.css
@@ -44,9 +44,11 @@
 
 #layers>.drawer.layer-group .drawer.layer-view {
   background: var(--color-light);
+  margin-top: 0px;
+  padding: 7px 0;
   border: none;
-  box-shadow: none;
   border-top: 2px solid var(--color-light-secondary);
+  box-shadow: none;
 }
 
 #layers>.layer-view>.drawer,
