--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -6,6 +6,7 @@
   --color-light: #ffffff;
   --color-light-secondary: #f2f2f2;
   --color-light-tertiary: #fafafa;
+  --color-mid: #e3e3e3;
   --color-on: #E18335;
   --color-no: #A21309;
 }
